make game container flex item to prevent gaps between squares

--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 #game-container{
     max-width: 320px;
+    max-height: 320px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
+
 .sq-item{
-    border: solid 2px black;
+    border: solid 1px black;
     height: 100px;
     width: 100px;
-    display: inline-block;
+    display: block;
+    margin: 0px;
+    padding: 0 auto;
+    text-align: center;
+}
+
+.sq-item-placed{
+
 }
